--- a/src/ui/Search/frmsearchreplace.ui
+++ b/src/ui/Search/frmsearchreplace.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>488</width>
-    <height>455</height>
+    <width>528</width>
+    <height>476</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -195,47 +195,7 @@
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="2">
-       <widget class="QPushButton" name="btnFindNext">
-        <property name="text">
-         <string>Find ⇩</string>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="3">
-       <widget class="QPushButton" name="btnSelectAll">
-        <property name="text">
-         <string>Select all</string>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="btnReplacePrev">
-        <property name="text">
-         <string>Replace ⇧</string>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QPushButton" name="btnReplaceNext">
-        <property name="text">
-         <string>Replace ⇩</string>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
        <widget class="QPushButton" name="btnReplaceAll">
         <property name="text">
          <string>Replace all</string>
@@ -245,14 +205,27 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QLabel" name="lblSpacer1">
+      <item row="2" column="2">
+       <widget class="QPushButton" name="btnFindNext">
         <property name="text">
-         <string notr="true"/>
+         <string>Find ⇩</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="0" column="2">
+       <widget class="QPushButton" name="btnReplaceNext">
+        <property name="text">
+         <string>Replace ⇩</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
        <widget class="QPushButton" name="btnFindPrev">
         <property name="text">
          <string>Find ⇧</string>
@@ -262,21 +235,39 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" rowspan="3">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+      <item row="3" column="0" colspan="4">
+       <widget class="QLabel" name="lblSpacer1">
+        <property name="text">
+         <string notr="true">:</string>
         </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Maximum</enum>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="btnReplacePrev">
+        <property name="text">
+         <string>Replace ⇧</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>100</width>
-          <height>20</height>
-         </size>
+        <property name="autoDefault">
+         <bool>true</bool>
         </property>
-       </spacer>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QPushButton" name="btncountAll">
+        <property name="text">
+         <string>Count</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="btnSelectAll">
+        <property name="text">
+         <string>Select all</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -350,12 +341,6 @@
   <tabstop>radSearchWithSpecialChars</tabstop>
   <tabstop>chkMatchWholeWord</tabstop>
   <tabstop>chkMatchCase</tabstop>
-  <tabstop>btnFindPrev</tabstop>
-  <tabstop>btnFindNext</tabstop>
-  <tabstop>btnSelectAll</tabstop>
-  <tabstop>btnReplacePrev</tabstop>
-  <tabstop>btnReplaceNext</tabstop>
-  <tabstop>btnReplaceAll</tabstop>
  </tabstops>
  <resources>
   <include location="../resources.qrc"/>
